--- a/lab6_2/app/src/main/res/values/strings.xml
+++ b/lab6_2/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">lab6_2</string>
+    <string name="image">image</string>
+    <string name="button">Button</string>
 </resources>
